<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proscenic_m6pro</name>
  <version>0.0.0</version>
  <description>Proscenic M6 Pro robot vacuum ROS2 description, bridged to ROS2 via vacuum_ros2_bridge, compatible with Kaia.ai software platform</description>

  <maintainer email="iliao@makerspet.com">Ilia O.</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://makerspet.com</url>
  <url type="repository">https://github.com/makerspet/proscenic-m6pro</url>
  <url type="bugtracker">https://github.com/makerspet/proscenic-m6pro/issues</url>
  <author email="iliao@makerspet.com">Ilia O.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>

  <!-- Physical bring-up (launch/bringup.launch.py) -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>vacuum_ros2_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kaiaai</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
